fix: harden track selection and align track table headers

--- a/app/globals.css
+++ b/app/globals.css
@@ -571,7 +571,7 @@ a:focus-visible {
 }
 
 .track-header.columns-6 {
-  grid-template-columns: 98px minmax(0, 1fr) 80px minmax(0, 1fr) 72px auto;
+  grid-template-columns: 98px minmax(0, 1fr) 80px minmax(0, 1fr) 72px 128px;
 }
 
 .track-col-track {
@@ -579,6 +579,7 @@ a:focus-visible {
 }
 
 .track-col-year {
+  width: 100%;
   justify-self: start;
   text-align: left;
 }
@@ -590,11 +591,13 @@ a:focus-visible {
 }
 
 .track-col-duration {
+  width: 100%;
   justify-self: end;
   text-align: right;
 }
 
 .track-col-actions {
+  width: 100%;
   justify-self: end;
   text-align: right;
 }
